Observation tech and bias

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[twoside,11pt,fleqn]{memoir}%%% TESI
+\documentclass[twoside,11pt,fleqn]{memoir}%%% seminario planetari PPS
 %openany
 
 %% rimuove workout errata dalla versione da consegnare
@@ -99,17 +99,17 @@
 Il crescente numero di esopianeti osservati ha stimolato lo studio dei processi di formazione dei sistemi planetari tramite modelli di formazione globale:
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\part{Formazione evoluzione sistemi planetari}
+\part{Fenomenologia modelo formazione nello scenario di core accretion\chapter}
 }
-\subfile{physprotopla}
+\input{observationphenom}
 \cleartorecto
 
 \part{Propriet\'a dei sistemi planetari osservati}
-\subfile{plaobs}
+\input{plaobs}
 \cleartorecto
 
 \part{Modelli di formazione globali}
-\subfile{GFM}
+\input{GFM}
 \cleartorecto
 
 {\let\clearpage\relax\let\cleardoublepage\relax
