--- a/main.tex
+++ b/main.tex
@@ -99,7 +99,7 @@
 Il crescente numero di esopianeti osservati ha stimolato lo studio dei processi di formazione dei sistemi planetari tramite modelli di formazione globale:
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\part{Fenomenologia modelo formazione nello scenario di core accretion\chapter}
+\part{Fenomenologia modelo formazione nello scenario di core accretion}
 }
 \input{observationphenom}
 \cleartorecto
