--- a/main.tex
+++ b/main.tex
@@ -99,13 +99,9 @@
 Il crescente numero di esopianeti osservati ha stimolato lo studio dei processi di formazione dei sistemi planetari tramite modelli di formazione globale:
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\part{Fenomenologia modelo formazione nello scenario di core accretion\chapter}
+\part{Proprieta esopianeti osservati}
 }
 \input{observationphenom}
-\cleartorecto
-
-\part{Propriet\'a dei sistemi planetari osservati}
-\input{plaobs}
 \cleartorecto
 
 \part{Modelli di formazione globali}
