--- a/observationphenom.tex
+++ b/observationphenom.tex
@@ -30,15 +30,48 @@ L'ellisse percorsa dalla stella attorno al baricentro stella pianeta ha ampiezza
 Astrometry: Photonoise $\sigma_{ph}=\frac{\lambda}{4\pi D}\frac{1}{S/N}$
 pg 65
 \end{workout}
-\end{equation}
+
 \section{Timing}
-\begin{workout}{ritardo segnale}
+\begin{workout}{Timing: ritardo segnale}
 Pg 75
 $\tau_p=\frac{1}{c}\frac{a\sin{i}M_p}{M_*}$
 \end{workout}
 \section{Microlensing}
 \begin{workout}{Microlensing}
+$\frac{M_L}{\msun{}}=0.123\frac{\theta_E^2}{\upvarpi_{rel}}$
 Pg 83. fig 5.7. Applications pg 93
+(Gould 10: ''fREQUENCY OF SOLAR LIKE SYSTEM AND ICE DAS GIANT BEYOND SNOW LINE FROM MICROLENSING...'')
 \end{workout}
 \section{Transiti}
 pg 103
+\begin{workout}{transiti: osservabilie probabilit\'a di rilevamento}
+pg 117, eccentric orbit pg 121-122
+\end{workout}
+\begin{workout}{Transiti: Propriet\'a dei pianeti a transito}
+pg 143, fig 6.33, 6.34, 6.35
+Mass-radius relation: chabrier 09
+\end{workout}
+
+\section{Imaging}
+pg 149
+\begin{workout}{Imaging: star-planet brightness ration}
+\begin{equation*}
+\frac{f_p()}{f_*()}=
+\end{equation*}
+\end{workout}
+\begin{workout}{Imaging: Observational limits}
+ground based (pg 158) space based imaging (pg162)
+fig 7.10
+\end{workout}
+
+\section{Struttura interna}
+
+pg 256 
+\begin{workout}{M-R diagram}
+fig11.2, 11,4 (EOS), 11.7, 11.8 (M-R)
+Ternary diagram 11.9, M-R realtion
+\end{workout}
+
+\begin{workout}{Atmosphere and starting conditions}
+fig 11.12
+\end{workout}
