some little adds

--- a/main.tex
+++ b/main.tex
@@ -101,6 +101,7 @@ Il crescente numero di esopianeti osservati ha stimolato lo studio dei processi 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Proprieta esopianeti osservati}
 }
+Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi le propriet\'a degli esopianeti nei diagrammi $(a-M)$, $(a-R)$, $(M-R)$.
 \input{observationphenom}
 \cleartorecto
 
