--- a/observationphenom.tex
+++ b/observationphenom.tex
@@ -1,3 +1,4 @@
+\chapter{Propriet\'a degli esopianeti osservati. Tecniche osservative}
 \section{Velocit\'a radiale}
 \begin{workout}{Radial velocity: keplerian observables}
 La coordinata z della stella $z=r(t)\sin{i}\sin{(\omega+\nu)}$ e per la velocit\'a radiale
@@ -63,7 +64,7 @@ ground based (pg 158) space based imaging (pg162)
 fig 7.10
 \end{workout}
 
-\section{Struttura interna}
+\chapter{Struttura interna}
 
 pg 256 
 \begin{workout}{M-R diagram}
