--- a/GFM.tex
+++ b/GFM.tex
@@ -1,4 +1,20 @@
+218, 296: disk formation, constrains from solar system
+
+\chapter{Vincoli osservativi sui modelli di formazione}
+
+
+\section{Osservazione dischi protoplanetari: distribuzione probabilit\'a caretteristiche}
+
+\begin{workout}{Effetti di selezione}
+Short dissipation times of proto-planetary disks - an artifact of selection effects?
+\end{workout}
+
+\begin{workout}{Dischi accrescimento: Osservabili}
+Protoplanetary Disks and Their Evolution
+\end{workout}
+
 \chapter{Accretion disk model}
+
 
 \chapter{Formazione protopianeti}
 
