--- a/observationphenom.tex
+++ b/observationphenom.tex
@@ -1,4 +1,4 @@
-\chapter{Propriet\'a degli esopianeti osservati. Tecniche osservative}
+\chapter{Esopianeti osservati e disschi protoplanetari.}
 
 \section{Velocit\'a radiale}
 \begin{workout}{Radial velocity: keplerian observables}
@@ -65,7 +65,9 @@ ground based (pg 158) space based imaging (pg162)
 fig 7.10
 \end{workout}
 
-\chapter{Struttura interna}
+\chapter{Vincoli osservativi sui modelli di formazione. Modelli di formazione globali.}
+
+\section{Struttura interna}
 
 pg 256 
 \begin{workout}{M-R diagram}
@@ -76,3 +78,6 @@ Ternary diagram 11.9, M-R realtion
 \begin{workout}{Atmosphere and starting conditions}
 fig 11.12
 \end{workout}
+
+\subsection{Sistema solare}
+
