--- a/GFM.tex
+++ b/GFM.tex
@@ -1,21 +1,92 @@
-218, 296: disk formation, constrains from solar system
-
-\chapter{Vincoli osservativi sui modelli di formazione}
-
-
-\section{Osservazione dischi protoplanetari: distribuzione probabilit\'a caretteristiche}
-
-\begin{workout}{Effetti di selezione}
-Short dissipation times of proto-planetary disks - an artifact of selection effects?
-\end{workout}
-
-\begin{workout}{Dischi accrescimento: Osservabili}
-Protoplanetary Disks and Their Evolution
-\end{workout}
-
 \chapter{Accretion disk model}
 
+\begin{workout}[Accretion disk sources]
+o218, 296: disk formation, constrains from solar system
+the alpha disk pg 18: theory of turbulent accretion disk
+\end{workout}
+
+\begin{workout}[Isothermal cloud collapse!]
+
+\end{workout}
+
+
+\begin{workout}[Intro a disco accrescimento]
+Nei modelli globali la formazione planetaria \'e simulata partendo dalla fase finale di accrescimento di massa sulla stella centrale (per semplicit\'a considero stelle di $1\msun{}$ singole): il collasso di nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
+L'ipotesi su cui si basano le simulazioni considerata \'e che la componente polverosa formi corpi pi\u massicci fino a masse di frazioni di masse terrestri  ed infine accrescere gas: lo scenario di core accretion (CA).
+\end{workout}
+
+\begin{workout}[Modelli 1D disco accrescimento: struttura verticale]
+auto gravitazione trascurabile quindi la struttura verticale \'e determinata dalla componente lungo z dell'attrazione del corpo centrale, profilo termico determinato da equilibrio.
+\end{workout}
+
+\begin{workout}[Descrizione trasporto momento angolare tramite parametrizzazione viscosit\'a]
+Mass conservation + momentum conservation in viscous flow: angular momentum evolution. Phenomena: Shear viscosity - turbulence - MRI.
+Nei modelli 1D per disco di accrescimento si parametrizza viscosit\'a tramite $\nu=\frac{\eta}{\rho}\to\alpha c_s H$: la viscosit\'a molecolare \'e troppo bassa  per trasportare all'esterno il momento angolare sui tempi-scala osservati.
+
+Theory of turbulent accretion disk: pg 18, 8.
+Flusso di x-momentum lungo y $\rho\exv{u_xu_y}$, dove considero la velocit\'a dell'elemento di fluido $(v_x+u_x,u_y)$ dove le $u$ rappresentano fluttuazioni della velocit\'a: $\sigma_{xy}=-\rho\exv{u_xu_y}$.
+Ricordando la definizione di tensore degli stress e con $\vec{v}=v_x(y)\hat{x}$
+
+\begin{equation}
+\sigma_{ij}=\eta(\partial_jv_i+\partial_iv_j-\frac{2}{3}\delta_{ij}\partial_kv_k+\zeta\delta_{ij}\partial_kv_k \to \eta\TDy{y}{v_x}
+\end{equation}
+
+\begin{equation}
+\PDof{t}(\rho v_i)+\PDof{x_i}(\rho v_iv_j+T_{ij})=F_i
+\end{equation}
+Fluttuazioni: $\sigma_{ij}=-\rho\exv{u_iu_j}$.
+Viscosit\'a molecolare: $\exv{u_iu_j}=-\nu\TDy{x_j}{v_i}$.
+Turbulence: Reynpold stress $\tau_{ij}=-\rho\exv{v_jv_i}$, $\exv{u_iu_j}=-\nu_T\TDy{x_j}{v_i}$
+\begin{equation}
+\PDy{t}{\Sigma}=3\frac{1}{r}\PDof{r}[r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]\label{eq:sigmaevol}
+\end{equation}
+\end{workout}
+
+\begin{workout}{Phitoievaporation: X-EUV-FUV (Alexander13: The Dispersal of Protoplanetary Disks)}
+Protoplanetary disc evolution and dispersal: the implications of X-ray photoevaporation
+\end{workout}
+
+\begin{workout}[alpha prescription]
+$\vec{v}=(u_r,r\Omega)$, stress tensor $\sigma_{r\phi}=-\Sigma\exv{u_ru_{\phi}}$.
+Enhanced turbulent viscosity: $-\Sigma\exv{u_ru_{\phi}}=\Sigma\nu r\TDy{r}{\Omega}$, $\nu=v_TH$, $\alpha=v_T/c_s$
+\end{workout}
+
+\begin{workout}[Modello di disco di accrescimento - (Mordasini18: 4) - Introduzione descrizione fenomeni grazie a PPS]
+Un modello di disco  di accrescimento usato nelle simulazioni considera l'evoluzione della densit\'a superficiale tramite l'equazione \eqref{eq:diskaccrphev-m18}
+
+\begin{align}
+&\TDy{t}{\Sigma}=\frac{1}{r}\PDof{r}[3r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]+\dot{\Sigma}_w(r)+\dot{\Sigma}_p(r)\label{eq:diskaccrphev-m18}\\
+&\dot{\Sigma}_w(a)=\left\{\begin{array}{c}0\\\frac{\dot{M}_w}{2\pi(a_{max}-R_g)a}\\\end{array}\right.
+\end{align}
+
+Densit\'a superficiale iniziale:
+\begin{equation}
+\Sigma(a,t=0)=\Sigma_0(\frac{r}{1AU})\expy{p_g}\Exp{[-(\frac{r}{R_o})\expy{2+p_g}]}(1-\sqrt{\frac{r}{R_i}})
+\end{equation}
+4-Mordasini18 (Hayashi81). $p_g\approx1$ (Andrews10).
+\end{workout}
+
+
+\begin{workout}{Foto-evaporazione}
+(Photoevaporation: veras armitage 2003, Alexander13, Mordasini12. Internal/External).
+EUV($E\approx13.6eV$): ionization, FUV($E\approx6-13.6eV$): dissociation, X-ray
+\end{workout}
+
+\section{Sedimentazione polvere}
+Protoplanetary disk and their evolution pg 29
+Protoplanetary dust: Apai Lauretta - particles dynamics pg 100
+
+Assumendo conversione completa di polvere in planetesimi, la densit\'a superficiale di planetesimi \'e
+\begin{equation}
+\Sigma_p(t=0,r)=f_{dg}\eta_{ice}\Sigma_g(t=0,r)
+\end{equation}
+
+\begin{workout}{dust midplane sedimantation}
+Stopping time $t_s=\frac{\rho_sa}{\rho c_s}$ ($a<\lambda_g$). L'evoluzione dinamica delle particelle solide \'e determinata flussi macroscopici dovuti all'evoluzione del disco, gas-drag, settling
+\end{workout}
 
 \chapter{Formazione protopianeti}
+
+\chapter{Accrescimento gas}
 
 \chapter{Migrazione}
