--- a/GFM.tex
+++ b/GFM.tex
@@ -42,7 +42,7 @@ Turbulence: Reynpold stress $\tau_{ij}=-\rho\exv{v_jv_i}$, $\exv{u_iu_j}=-\nu_T\
 \end{equation}
 \end{workout}
 
-\begin{workout}{Phitoievaporation: X-EUV-FUV (Alexander13: The Dispersal of Protoplanetary Disks)}
+\begin{workout}[Photoievaporation: X-EUV-FUV (Alexander13: The Dispersal of Protoplanetary Disks)]
 Protoplanetary disc evolution and dispersal: the implications of X-ray photoevaporation
 \end{workout}
 
@@ -67,12 +67,13 @@ Densit\'a superficiale iniziale:
 \end{workout}
 
 
-\begin{workout}{Foto-evaporazione}
+\begin{workout}[Foto-evaporazione]
 (Photoevaporation: veras armitage 2003, Alexander13, Mordasini12. Internal/External).
 EUV($E\approx13.6eV$): ionization, FUV($E\approx6-13.6eV$): dissociation, X-ray
 \end{workout}
 
-\section{Sedimentazione polvere}
+\section{Formazione planetesimi}
+
 Protoplanetary disk and their evolution pg 29
 Protoplanetary dust: Apai Lauretta - particles dynamics pg 100
 
@@ -81,12 +82,41 @@ Assumendo conversione completa di polvere in planetesimi, la densit\'a superfici
 \Sigma_p(t=0,r)=f_{dg}\eta_{ice}\Sigma_g(t=0,r)
 \end{equation}
 
-\begin{workout}{dust midplane sedimantation}
+\begin{workout}[Particle-gas dynamics. dust midplane sedimantation]
+Weidenschilling cuzzi 06: Particle-gas dynamics and primary accretion, Apai Lauretta Protoplanetary Dust pg 100
 Stopping time $t_s=\frac{\rho_sa}{\rho c_s}$ ($a<\lambda_g$). L'evoluzione dinamica delle particelle solide \'e determinata flussi macroscopici dovuti all'evoluzione del disco, gas-drag, settling
 \end{workout}
 
-\chapter{Formazione protopianeti}
+\section{Accrescimento pianetsemi: formazione proto-pianeti.}
+
+La massa dei core varia secondo
+\begin{align}
+&\dot{M}_c=\Omega\Sigma_pR^2_{capt}F_G\\
+&\dot{M}_c=\Omega\Sigma_pR^2_{capture}F_G
+\end{align}
+
+\begin{workout}[Accrescimento pianetesimi: orderly, runaway, oligarchic]
+The growth of planetary embryos:  orderly, runaway, or oligarchic? (Rafikov 2002)
+\begin{align}
+\TDy{t}{M_e}\approx\pi R_e^2\Omega mN\frac{v}{v_z}[1+\frac{2GM_e}{R_ev^2}]
+\end{align}
+Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accrescimento runaway: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{1/3}$. Accrescimento oligarchico: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$.
+\end{workout}
+
+
+\begin{workout}[Protoplanets accretion of solids]
+Other refs: Planet formation coagulation: focus on U,N (Goldreich 04), Final stages of planets formation (Goldreich 04), Formation of giant planets core: evaluating key processes (levison 09).
+Safronov69: $\dot{M}_c=\Omega\Sigma_pR^2_{capture}F_G$, $R_{capture}$ larger than core radius due to gas drag, $F_G(e,i)$ gravitational focus (give rise to different growth regimes: runaway, oligarchic, orderly).
+Runaway growth until protoplanets $100-1000km$ (dep on position).
+Oligarchic growth: velocity of planetesimal raised by viscous stirring (gravitational scattering)/ damped by gas (until disk present).
+\end{workout}
+
+\begin{workout}[Planetesimal dynamics: viscous stirring]
+The origin of anisotropic velocity dispersion of particles in a disc potential (Ida, Makino 93, Stewart-Wetherill 1988 Ida1990)
+\end{workout}
 
 \chapter{Accrescimento gas}
+
+Planet formation models: the interplay with the planetesimal disc (Fortier 2013)
 
 \chapter{Migrazione}
