--- a/functions.sty
+++ b/functions.sty
@@ -71,7 +71,8 @@
  \newcommand{\ER}{E_{\text{RYD}}} %% E_ryd
 \newcommand{\Evar}[1]{#1'} %%% Variazione Euleriana
 \newcommand{\expy}[1]{^{#1}} %%  Esponente >1 char
-
+\newcommand{\mearth}{M_{\oplus}} %% massa terra
+\newcommand{\rearth}{R_{\oplus}} %% massa terra
 
 %%%%% FFFFFFFF
 
@@ -107,6 +108,8 @@
 
 %%%%%%%%%%%JJJJJJJJJJJJJJJJJJ
 \newcommand{\jp}{J^{\Pi}}
+\newcommand{\mjupiter}{M_{\jupiter}} %% massa giove
+\newcommand{\rjupiter}{R_{\jupiter}} %% radius of giove
 
 %%% KKKKKKK
 
