--- a/main.tex
+++ b/main.tex
@@ -101,18 +101,25 @@ Il crescente numero di esopianeti osservati ha stimolato lo studio dei processi 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Proprieta esopianeti osservati}
 }
-Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi le propriet\'a degli esopianeti nei diagrammi $(a-M)$, $(a-R)$, $(M-R)$.
+Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi le propriet\'a degli esopianeti nei diagrammi $(a-M)$, $(a-R)$, $(M-R)$: quali osservabili determinano le diverse tecniche osservative, struttura pianeta (sistema solare, esopianeti).
 \input{observationphenom}
 \cleartorecto
 
-\part{Modelli di formazione globali}
-\input{GFM}
+{\let\clearpage\relax\let\cleardoublepage\relax
+\part{Formazione sistemi planetari: descrizione modello core accretion}
+}
+\input{CAdesc}
 \cleartorecto
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\part{Conclusioni}
+\part{Modelli di formazione globali}
 }
-Cosa penso di PPS.
+Confronto i risultati dei modelli di formazione globali con le osservazioni tenendo conto delle semplificazioni/limiti dei modelli. Parametrizzazione fenomeni per riprodurre le osservazioni: possibili spiegazioni.
+\input{GFMresult}
+\cleartorecto
+
+
+
 {\let\clearpage\relax\let\cleardoublepage\relax
 \backmatter
 }
