--- a/observationphenom.tex
+++ b/observationphenom.tex
@@ -1,4 +1,6 @@
-\chapter{Esopianeti osservati e disschi protoplanetari.}
+{\let\clearpage\relax\let\cleardoublepage\relax
+\chapter{Esopianeti osservati e dischi protoplanetari.}
+}
 
 \section{Velocit\'a radiale}
 \begin{workout}{Radial velocity: keplerian observables}
@@ -65,7 +67,9 @@ ground based (pg 158) space based imaging (pg162)
 fig 7.10
 \end{workout}
 
+{\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Vincoli osservativi sui modelli di formazione. Modelli di formazione globali.}
+}
 
 \section{Struttura interna}
 
