--- a/sources.sty
+++ b/sources.sty
@@ -1,7 +1,7 @@
 \ProvidesPackage{sources}
-\addbibresource{tesi.bib}
+\addbibresource{seminario.bib}
 
 \graphicspath{ {figures/}}
 
 %%% input rawdata
-\input{rawdata.tex}
+%\input{rawdata.tex}
