concretezza: obs pheno and pla interior

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -176,7 +176,15 @@ Ormel 15/ Cimerman 17
 
 
 \chapter{Migrazione}
-Refs: \cite{ward1997protoplanet}, \cite{terquem2000disks}, \cite{menou2004low}, (kley Nelson 2012, Baruteau 2016), crida06: On width and shape of gaps in PPD,crida phd.
+
+\begin{workout}[Migration refs]
+Refs: \cite{ward1997protoplanet}, \cite{terquem2000disks}, \cite{menou2004low}, (
+Planet-disk interaction and orbital evolution (kley Nelson 2012), 
+Baruteau 2016)
+crida06: On width and shape of gaps in PPD,crida phd, 
+Trilling 98:Orbital evolution and migration of giant planet: modellingextrasolar planets (Angular momentum injection rate, torque from spinning star, Impact of planet migration models on planetary populations)
+Dittkrist 14: Impact of planetsmigration models n planetarypopulation (Migration II inward/outward: non equilibrium gas flow, problem of isothermal disk migration timescale: migration I regime, Fig 7,
+\end{workout}
 
 Il disco di accrescimento esercita momento torcente sul pianeta che produce un trasferimento di momento angolare dal pianeta al disco $\Lambda(a,R)$
 \begin{align*}
@@ -190,7 +198,7 @@ N-body, resonanceand migration
 The dynamics of two massive planets on inclined orbits (Veras Armitage 04)
 \end{workout}
 
-\subsection{Migrazione tipo I: regime lineare}
+\section{Migrazione tipo I: regime lineare}
 
 Unperturbed disk: axisymmetric, keplerian rotation $\Omega(r)=\sqrt{GM_*/r^3}$, vanishing radial velocity. Planet potential, periodic in $\phi$, $\phi_p=\Omega_pt$:
 \begin{align*}
@@ -228,7 +236,7 @@ Paardekooper10, Dittkrist14: total torque $\Gamma_t=\frac{1}{\gamma}(C_0+C_1p_{\
 Benitez Llambay 15: heating torque, Paardekooper14 Pierens 15: dynamic corotation torque.
 \end{workout}
 
-\subsection{Massive enough planet to open gap: migration II}
+\section{Massive enough planet to open gap: migration II}
 Refs: On the tidal interaction between protoplanets and the primordial solar nebula. II - Self-consistent nonlinear interaction (1986)
 Non-linear. For larger planet mass, when disk density distro is changed cons., the linear hteory is no more adeguate. If angular momentum isdeposited locally (viscous dissipation/shock waves)  the disk receeds from planets
 Ida-lin04: angular momentum trasport in viscous accretion disk without planets that in type II migration act as relays that transmit angular momentum at that rateacross their gap via tidal torques.
@@ -240,13 +248,16 @@ Planet-disk interactions: exchange of angular momentum. Low mass planet-linear t
 Low mass planets: Lindblad and corotation torque. Rapid migration of intermediate mass planets. Gap forming massive planets: slower migration determined by viscous evolution of disk. (Role of disk self-gravity and MHD turbulence as function of planet mass).
 
 
-    \begin{frame}[allowframebreaks]{Planet-disk interactions: exchange of angular momentum. Type III migration: planet of intermediate mass. (‘’Planet-disk interactions and orbital evolution’’)}
+\section{Migrazione III:}
+Planet-disk interactions: exchange of angular momentum. Type III migration: planet of intermediate mass. (‘’Planet-disk interactions and orbital evolution’’).
+
+Flow-through corotation torque: $\Gamma_{flow}=2\pi\Sigma_s\dot{a}_p\Omega_pa_p^3x_s$.
+
 \begin{align*}
 &\dot{a}_p=\frac{2\Gamma^L}{\Omega_pa_p(m_p’-\delta m)}
 \end{align*}
-\end{frame}
 
-\subsection{Eccentricity and inclination evolution}
+\section{Eccentricity and inclination evolution}
 Planet-disk interactions: normal, tangential, radial forces. eccentricity and inclination evolution. (‘’Planet-disk interactions and orbital evolution’’)
 Decomposition of planet’s potential: non-circular orbit
 \begin{align*}
