--- a/observationphenom.tex
+++ b/observationphenom.tex
@@ -1,9 +1,38 @@
 {\let\clearpage\relax\let\cleardoublepage\relax
+\chapter{Vincoli sui modelli di formazione. Modelli di formazione globali.}
+}
+
+\section{Diagramma (a,M): storia accrescimento di massa e migrazione}
+
+\section{Diagramma (M,R): struttura interna composizione}
+
+\subsection{Struttura interna}
+
+pg 256 
+\begin{workout}[M-R diagram]
+fig11.2, 11,4 (EOS), 11.7, 11.8 (M-R)
+Ternary diagram 11.9, M-R realtion
+\end{workout}
+
+\begin{workout}[Atmosphere and starting conditions]
+fig 11.12
+\end{workout}
+
+\section{Sistema solare}
+
+\section{Ipotesi core accretion o instabilit\'a gravitazionale}
+
+\section{Simulazione polazioni planetarie}
+
+
+{\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Esopianeti osservati e dischi protoplanetari.}
 }
 
-\section{Velocit\'a radiale}
-\begin{workout}{Radial velocity: keplerian observables}
+\section{Tecniche osservative, osservabili e bias osservativi}
+
+\subsection{Velocit\'a radiale}
+\begin{workout}[Radial velocity: keplerian observables]
 La coordinata z della stella $z=r(t)\sin{i}\sin{(\omega+\nu)}$ e per la velocit\'a radiale
 \begin{align}
 &v_r=\dot{z}=K[\cos{(\omega+\nu)}+e\cos{\omega}]\label{eq:vrsignal}\\
@@ -17,10 +46,10 @@ v_r(t)=K[\cos{(\omega+\nu(t)}+e\cos{\omega}]+\gamma+d(t-t_0)
 \end{equation}
 \end{workout}
 Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \eqref{eq:vrsignal}: viene sottratto il segnale Kepleriano dominante fino a che resta solo rumore.
-\begin{workout}{Radial velocity: dtectability and selection effects (pg 14)}
+\begin{workout}[Radial velocity: dtectability and selection effects (pg 14)]
 fig 2.6,fig 2.18
 \end{workout}
-\begin{workout}{properties of observed planeta}
+\begin{workout}[properties of observed planeta]
 fig 2.26pag 35
 \end{workout}
 \section{Astrometry}
@@ -29,59 +58,42 @@ L'ellisse percorsa dalla stella attorno al baricentro stella pianeta ha ampiezza
 \alpha=\frac{M_p}{M_p+M_*}a\approx\frac{M_p}{M_*}a=(\frac{M_p}{M_*})(\frac{a}{1AU})(\frac{d}{1pc})\expy{-1}\si{\arcsec}
 \end{equation}
 
-\begin{workout}{Variation in photocentre, radial velocity and total flux}
+\begin{workout}[Variation in photocentre, radial velocity and total flux]
 Astrometry: Photonoise $\sigma_{ph}=\frac{\lambda}{4\pi D}\frac{1}{S/N}$
 pg 65
 \end{workout}
 
-\section{Timing}
-\begin{workout}{Timing: ritardo segnale}
+\subsection{Timing}
+\begin{workout}[Timing: ritardo segnale]
 Pg 75
 $\tau_p=\frac{1}{c}\frac{a\sin{i}M_p}{M_*}$
 \end{workout}
 \section{Microlensing}
-\begin{workout}{Microlensing}
+\begin{workout}[Microlensing]
 $\frac{M_L}{\msun{}}=0.123\frac{\theta_E^2}{\upvarpi_{rel}}$
 Pg 83. fig 5.7. Applications pg 93
 (Gould 10: ''fREQUENCY OF SOLAR LIKE SYSTEM AND ICE DAS GIANT BEYOND SNOW LINE FROM MICROLENSING...'')
 \end{workout}
 \section{Transiti}
 pg 103
-\begin{workout}{transiti: osservabilie probabilit\'a di rilevamento}
+\begin{workout}[transiti: osservabilie probabilit\'a di rilevamento]
 pg 117, eccentric orbit pg 121-122
 \end{workout}
-\begin{workout}{Transiti: Propriet\'a dei pianeti a transito}
+\begin{workout}[Transiti: Propriet\'a dei pianeti a transito]
 pg 143, fig 6.33, 6.34, 6.35
 Mass-radius relation: chabrier 09
 \end{workout}
 
-\section{Imaging}
+\subsection{Imaging}
 pg 149
-\begin{workout}{Imaging: star-planet brightness ration}
+\begin{workout}[Imaging: star-planet brightness ration]
 \begin{equation*}
 \frac{f_p()}{f_*()}=
 \end{equation*}
 \end{workout}
-\begin{workout}{Imaging: Observational limits}
+\begin{workout}[Imaging: Observational limits]
 ground based (pg 158) space based imaging (pg162)
 fig 7.10
 \end{workout}
 
-{\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Vincoli osservativi sui modelli di formazione. Modelli di formazione globali.}
-}
-
-\section{Struttura interna}
-
-pg 256 
-\begin{workout}{M-R diagram}
-fig11.2, 11,4 (EOS), 11.7, 11.8 (M-R)
-Ternary diagram 11.9, M-R realtion
-\end{workout}
-
-\begin{workout}{Atmosphere and starting conditions}
-fig 11.12
-\end{workout}
-
-\subsection{Sistema solare}
 
