vincoli ai modelli di formazione

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -1,4 +1,41 @@
-\chapter{Accretion disk model}
+{\let\clearpage\relax\let\cleardoublepage\relax
+\chapter{Modello formazione planetaria nello schema di core accretion}
+}
+
+\section{Core accretion o instabilit\'a gravitazionale?}
+
+\begin{workout}[Refs GI vs CA]
+planetesimal hypoithesis: chamberlin 05, Safronov 69, Hayashi 77. Formation on dynamical scale via GI: Kuiper 51, Cameron 62.
+\end{workout}
+
+
+Il modello di formazione planetaria da me considerato, core accretion (CA) vedi \ref{part:CAdesc}, si basa sulla sedimentazione della componente polverosa nel disco protoplanetario in embrioni planetari che, se abbastanza massicci sono in grado di accrescere il gas presente nel disco protoplanetario.
+
+L'altro schema di formazione considera l'instabilit\'a gravitazionale del disco. 
+
+Esistono alcuni dati osservativi in favore del primo modello, considerando il sistema solare: arricchimento dei pianeti del sistema solare rispetto a composizione solare di metalli (la composizione di Urano/Nettuno contiene $1\%$ di $H_2$, $He$ contenuto in pianeta di composizione solare con pari massa di metalli), ipotizzando una rimozione della parte gassosa il pianeta deve avere il tempo di sedimentare la componente metllica, \'e necessario un disco di massa solare e i pianeti si formerebbero a distanza maggiore, non spiega la formazione dei corpi minori.
+
+\chapter{Modello disco di accrescimento}
+
+\begin{workout}[Refs dischi protoplanetari]
+Ciesla Dullemond10 
+\end{workout}
+
+\begin{workout}[Classificazione YSO: convenzioni]
+Sorgenti con SED declinante in mid infrared ($2.5-10\si{\micro\meter}$): $1.5<\alpha_{IR}=<0$. Active/passive: mass infall convert G into thermalradiation/reprocessed starlight.
+\end{workout}
+
+\begin{workout}[Viscous/turbulent disk]
+laminar (high momentum diffusion)
+mass inflow Gullbring98 \SIrange{e-9}{e-7}{\per\year}$\msun{}$
+\end{workout}
+
+
+\begin{workout}[MRI]
+fig 10.3:
+gammie 1996
+\end{workout}
+
 
 \begin{workout}[Accretion disk sources]
 o218, 296: disk formation, constrains from solar system
