--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -1,4 +1,9 @@
 {\let\clearpage\relax\let\cleardoublepage\relax
+\chapter{Simulazione polazioni planetarie}
+}
+
+
+{\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Funzione di massa sistemi planetari}
 }
 
