--- a/main.tex
+++ b/main.tex
@@ -80,15 +80,16 @@
 %%% SOlve page pre chapter at begginning page without number%@ps
 \chapterstyle{plain}
 %%%
-\makeatletter
-\newcommand{\titolo}{\@title}
-\makeatother
+%\makeatletter
+%\newcommand{\titolo}{\@title}
+%\makeatother
 \author{ }
-\title{Studio delle oscillazioni solari}
+\title{Simulazione popolazioni planetarie}
 \date{\today}
 %%%
 %\outputonly{1}% output in pdf only page number
 \begin{document}
+\maketitle
 \pagenumbering{roman}
 \tableofcontents*
 \mainmatter
@@ -96,17 +97,18 @@
 \aliaspagestyle{chapter}{plain}
 \cleartorecto
 %%Intro
-Il crescente numero di esopianeti osservati ha stimolato lo studio dei processi di formazione dei sistemi planetari tramite modelli di formazione globale:
+Il crescente numero di esopianeti osservati ha stimolato lo studio dei processi di formazione dei sistemi planetari tramite modelli di formazione globale: 
+I modelli di formazione planetaria fino alla scoperta del primo esopianeta (Queloz 1995) erano vincolati a riprodurre le caratteristiche peculiari del sistema
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\part{Proprieta esopianeti osservati}
+\part{Vincoli ai modelli di formazione planetaria}
 }
 Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi le propriet\'a degli esopianeti nei diagrammi $(a-M)$, $(a-R)$, $(M-R)$: quali osservabili determinano le diverse tecniche osservative, struttura pianeta (sistema solare, esopianeti).
-\input{observationphenom}
+\input{PFMconstraints}
 \cleartorecto
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\part{Formazione sistemi planetari: descrizione modello core accretion}
+\part{Formazione sistemi planetari: descrizione modello core accretion}\label{part:CAdesc}
 }
 \input{CAdesc}
 \cleartorecto
