--- a/main.tex
+++ b/main.tex
@@ -116,7 +116,8 @@ Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Modelli di formazione globali}
 }
-Confronto i risultati dei modelli di formazione globali con le osservazioni tenendo conto delle semplificazioni/limiti dei modelli. Parametrizzazione fenomeni per riprodurre le osservazioni: possibili spiegazioni.
+Lo scopo dei modelli di formazione globali \'e di costruire una descrizione semplificata dei processi fisici che portano alla formazione di un pianeta; quindi generare una popolazione planetaria a partire da distribuzione di condizioni iniziali, del disco di accrescimento, ricavata dalle osservazioni che riproduca la distribuzione di caratteristiche osservate, tenendo conto dei bias osservativi.
+
 \input{GFMresult}
 \cleartorecto
 
