--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -3,7 +3,6 @@
 }
 
 
-
 \begin{workout}[Sistema solare - sezione del capitolo dati/vincoli osservativi: testcostruzione modelli planetarii e dettagli]
 
 \end{workout}
@@ -57,6 +56,11 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 
 La popolazione degli esopianeti osservata riflette quella reale tramite gli effetti di selezione dovuti alla probabilit\'a direvilamento della tecnica particolare. Le osservazioni pi\'u numerose sono basate sull'osservazione della velocit\'a lungo la linea di vista dovuto al moto della stella attorno al baricentro del sistema stella pianeta (RV) o differenza nella luminosit\'a dovuto al transito del pianeta tra stella e osservatore.
 
+\begin{figure}[!ht]
+\includegraphics[width=0.9\textwidth]{obsMA}\label{fig:Maplot}
+\caption{Da \cite{mordasini2018}.}
+\end{figure}
+
 \section{Popolazione esopianeti rilevati tramite RV}
 
 Se l'asse z \'e lungo la linea di vista la posizione della stella \'e $z=r(t)\sin{i}\sin{(\omega+\nu)}$ e per la velocit\'a radiale:
@@ -65,7 +69,6 @@ Se l'asse z \'e lungo la linea di vista la posizione della stella \'e $z=r(t)\si
 &K=\frac{2\pi}{P}\frac{a_*\sin{i}}{(1-e^2)\expy{1/2}}=(\frac{2\pi G}{P})\expy{1/3}\frac{M_p\sin{i}}{(M_p+M_*)\expy{2/3}}\frac{1}{(1-e^2)\expy{1/1}}
 \end{align}
 dove $K$ \'e la semi-ampiezza.
-
 
 \begin{workout}[Simulated radialo detection limit]
 Perrymann pg 34 fig 2.25 d
@@ -76,9 +79,58 @@ paragrafo detectability and selection effects pg 14 perryman
 fig 2.6,fig 2.18
 \end{workout}
 
+
+\begin{workout}[Distribuzioni elementi orbitali: periodo e massa]
+
+La distribuzione di $M_p\sin{i}$ osservata \'e mostrata in figura \ref{fig:RVmpdistro}, la distribuzione di periodo orbitale \ref{fig:PdistroM30}/\ref{fig:Pdistrom30} perpianeti di massa maggiore/minore di $30\mearth{}$, la distribuzione dei pianeti in funzione della metallicit\'a stellare in \ref{fig:freqZstar}.
+
 \begin{figure}[!ht]
-\includegraphics[width=0.7\textwidth]{}
+\begin{subfigure}[b]{0.47\textwidth}
+\includegraphics[width=0.9\textwidth]{freqvsM}
+\caption{Diagramma $(M_p,a$ dei pianeti extrasolari osservati (The extrasolar planet encyclopedia -2017): evidenziati in rosso i pianeti rivelati tramite RV, celeste tramite transito, rosa tramite imaging e verde tramite microlensing. Da \cite{howard2012planet}.}\label{fig:Mdistro}
+\end{subfigure}
+~
+\begin{subfigure}[b]{0.47\textwidth}
+\includegraphics[width=0.9\textwidth]{PfreqvsFeH}\label{fig:freqZstar}
+\caption{Da \cite{mayor2011harps}}
+\end{subfigure}
 \end{figure}
+
+\begin{figure}[!ht]
+\begin{subfigure}[b]{0.47\textwidth}
+\centering
+\includegraphics[width=0.9\textwidth]{freqvsPgiant}
+\caption{Da \cite{mayor2011harps}}\label{fig:PdistroM30}
+\end{subfigure}
+~
+\begin{subfigure}[b]{0.47\textwidth}
+\centering
+\includegraphics[width=0.9\textwidth]{freqvsPlowM}\label{fig:Pdistrom30}
+\caption{Da \cite{mayor2011harps}}
+\end{subfigure}
+\end{figure}
+
+\end{workout}
+
+\begin{workout}[multplanet system: mean motion resonances, orbital spacing]
+wright09: ten multiplanet sysytem and systematic
+Winn, Fabricky 15
+fig 2.30 pg 39 Perrymann
+\end{workout}
+
+%\begin{figure}[]
+%\begin{subfigure}[b]{0.47\textwidth}
+%\centering
+%\includegraphics[keepaspectratio,width=0.95\textwidth]{midlmodes}
+%\caption{I picchi della densit\'a spettrale si dispongono su creste in cui \'e concentrata la potenza in accordo al modello. Determinata usando i primi 144 giorni di osservazione di MDI con $l\leq300$. Da \cite{chr02helioseismology}.}\label{fig:midlmodes}
+%\end{subfigure}
+%~
+%\begin{subfigure}[b]{0.5\textwidth}
+%\centering
+%\includegraphics[keepaspectratio,width=0.95\textwidth]{nrmodesLAWE}
+%\caption{Modi adiabatici calcolati sulla base di un modello solare. Da \cite{chr02helioseismology}.}\label{fig:nrmodesLAWE}
+%\end{subfigure}
+%\end{figure}
 
 \begin{workout}[Radial velocity: keplerian observables (Appendice RV)]
 La coordinata z della stella $z=r(t)\sin{i}\sin{(\omega+\nu)}$ e per la velocit\'a radiale
@@ -106,7 +158,9 @@ La velocit\'a radiale della stella \'e
 v_r(t)=K[\cos{(\omega+\nu(t)}+e\cos{\omega}]+\gamma+d(t-t_0)
 \end{equation}
 \end{workout}
+
 Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \eqref{eq:vrsignal}: viene sottratto il segnale Kepleriano dominante fino a che resta solo rumore.
+
 \begin{workout}[Radial velocity: dtectability and selection effects (pg 14)]
 fig 2.6,fig 2.18
 \end{workout}
@@ -114,16 +168,30 @@ fig 2.6,fig 2.18
 
 \section{Popolazione esopianeti rilevati tramite transito}
 
-pg 256 
-\begin{workout}[M-R diagram]
-fig11.2, 11,4 (EOS), 11.7, 11.8 (M-R)
-Ternary diagram 11.9, M-R realtion
+Le osservabili sono la differenza di luminosit\'a durante il transito, la durata totale e di massima occultazione del transito, e il periodo: da questi \'e possibile ricavare $R_p$, a, i, $R_*$, e facendo uso della relazione massa raggio appropriata per la fase evolutiva della stella $M_*$
+
+La probabilit\'a che l'orbita di un pianeta sia allineata con l'osservatore in maniera da avere un transito, per orbite circolari ed eccentriche, \'e:
+\begin{align*}
+&p=\frac{R_*}{a}=0.005(\frac{R_*}{\rsun{}})(\frac{a}{1AU})\expy{-1}\\
+&p=(\frac{R_*\pm R_p}{a})(\frac{1}{1-e^2})
+\end{align*}
+La maggiore probabilit\'a \'e compensata approssimativamente dalla minore durata del transito.
+
+\begin{workout}[Radial velocity: dectability and selection effects]
+Considerando un numero totale di osservazioni $N_o$ durante il transito si hanno $N_t\approx N_o\frac{R_*}{\pi a}$; il rapport segnale rumore \'e $S/N=\sqrt{N_t}\frac{\delta}{\sigma}$, $\sigma$ precisione fotometrica, $\sigma\propto\frac{1}{\sqrt{N_{ph}}}\propto d$. Per fissato S/N e tipo stellare il numero di pianeti rivelati varia come
+\begin{equation}
+V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
+\end{equation}
 \end{workout}
 
-pg 103
+
 \begin{workout}[transiti: osservabilie probabilit\'a di rilevamento]
+pg103
 pg 117, eccentric orbit pg 121-122
+From space: presence of structure on stellar surface Perryman 3.4, Eriksson Lindegren 07; simulation of stellar jitter: Svensson Ludwig 05, Ludwig 06.
+Probability of randomlyoriented planet on circular/eccentric orbit (Borucki Summers 84/Barnes 07, Burke 08,  Seagroves 03, Kane von Braun 08):
 \end{workout}
+
 \begin{workout}[Transiti: Propriet\'a dei pianeti a transito]
 pg 143, fig 6.33, 6.34, 6.35
 Mass-radius relation: chabrier 09
@@ -134,40 +202,15 @@ Mass-radius relation: chabrier 09
 fig 11.12
 \end{workout}
 
-\begin{workout}[Astrometry]
-L'ellisse percorsa dalla stella attorno al baricentro stella pianeta ha ampiezza angolare
-\begin{equation}
-\alpha=\frac{M_p}{M_p+M_*}a\approx\frac{M_p}{M_*}a=(\frac{M_p}{M_*})(\frac{a}{1AU})(\frac{d}{1pc})\expy{-1}\si{\arcsec}
-\end{equation}
-
-Variation in photocentre, radial velocity and total flux
-Astrometry: Photonoise $\sigma_{ph}=\frac{\lambda}{4\pi D}\frac{1}{S/N}$
-pg 65
-
+pg 256 
+\begin{workout}[M-R diagram]
+fig11.2, 11,4 (EOS), 11.7, 11.8 (M-R)
+Ternary diagram 11.9, M-R realtion
+Fig 6.33/34/35: mass radius realtion
 \end{workout}
 
-\begin{workout}[Timing: ritardo segnale]
-Pg 75
-$\tau_p=\frac{1}{c}\frac{a\sin{i}M_p}{M_*}$
-\end{workout}
 
-\begin{workout}[Microlensing]
-$\frac{M_L}{\msun{}}=0.123\frac{\theta_E^2}{\upvarpi_{rel}}$
-Pg 83. fig 5.7. Applications pg 93
-(Gould 10: ''fREQUENCY OF SOLAR LIKE SYSTEM AND ICE DAS GIANT BEYOND SNOW LINE FROM MICROLENSING...'')
-\end{workout}
-
-\begin{workout}[Imaging: star-planet brightness ration]
-pg 149
-\begin{equation*}
-\frac{f_p()}{f_*()}=
-\end{equation*}
-\end{workout}
-\begin{workout}[Imaging: Observational limits]
-ground based (pg 158) space based imaging (pg162)
-fig 7.10
-\end{workout}
-
+\section{Struttura interna, composizione/diagramma $(M,R)$}
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{YSO: distribuzione propriet\'a dischi protoplanetari}
