--- a/seminario.bib
+++ b/seminario.bib
@@ -18,3 +18,22 @@
   year={2012},
   publisher={Annual Reviews}
 }
+
+@article{howard2012planet,
+  title={Planet occurrence within 0.25 AU of solar-type stars from Kepler},
+  author={Howard, Andrew W and Marcy, Geoffrey W and Bryson, Stephen T and Jenkins, Jon M and Rowe, Jason F and Batalha, Natalie M and Borucki, William J and Koch, David G and Dunham, Edward W and Gautier III, Thomas N and others},
+  journal={The Astrophysical Journal Supplement Series},
+  volume={201},
+  number={2},
+  pages={15},
+  year={2012},
+  publisher={IOP Publishing}
+}
+
+
+@article{mayor2011harps,
+  title={The HARPS search for southern extra-solar planets XXXIV. Occurrence, mass distribution and orbital properties of super-Earths and Neptune-mass planets},
+  author={Mayor, Michel and Marmier, M and Lovis, Ch and Udry, S and S{\'e}gransan, D and Pepe, F and Benz, W and Bertaux, J-L and Bouchy, F and Dumusque, X and others},
+  journal={arXiv preprint arXiv:1109.2497},
+  year={2011}
+}
