--- a/sources.sty
+++ b/sources.sty
@@ -1,7 +1,7 @@
 \ProvidesPackage{sources}
 \addbibresource{seminario.bib}
 
-\graphicspath{ {figures/}}
+\graphicspath{ {figures/},{figures/mordasini18/},{figures/mayor11/},{figures/howard12}}
 
 %%% input rawdata
 %\input{rawdata.tex}
