Update on Overleaf.

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -55,7 +55,7 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 La popolazione degli esopianeti osservata riflette quella reale tramite gli effetti di selezione dovuti alla probabilit\'a direvilamento della tecnica particolare. Le osservazioni pi\'u numerose sono basate sull'osservazione della velocit\'a lungo la linea di vista dovuto al moto della stella attorno al baricentro del sistema stella pianeta (RV) o differenza nella luminosit\'a dovuto al transito del pianeta tra stella e osservatore.
 
 \begin{figure}[!ht]
-\includegraphics[width=0.9\textwidth]{obsMA}\label{fig:Maplot}
+\includegraphics[width=0.9\textwidth]{obsMa}\label{fig:Maplot}
 \caption{Da \cite{mordasini2018}.}
 \end{figure}
 
