non ho pensato molto immagini vs pensiero parole

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -23,6 +23,9 @@ helioseismology and meteoritic dating
 
 \end{workout}
 
+\begin{workout}[Migrazione II: realistica]\end{workout}
+grand tack (produce dinamical shack up) 
+eccesso pianeti gioviani a 1au in simulazioni??
 \begin{workout}[Noble gas enrichment]
 
 \end{workout}
@@ -210,9 +213,21 @@ Fig 6.33/34/35: mass radius realtion
 \end{workout}
 
 
-\section{Struttura interna, composizione/diagramma $(M,R)$}
+%\section{Struttura interna, composizione/diagramma $(M,R)$}
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{YSO: distribuzione propriet\'a dischi protoplanetari}
 }
+Perryman ch 10
+\begin{workout}[YSO: classificazione SED]
+
+\end{workout}
+
+\begin{workout}[YSO properties distro]
+da dove sono ricavete nei PPS?
+mass: MMSN, andrews 10, manara 16
+lifetime: IR/UV excess: haisch 01, mamajek 09
+initial embryo starting position: relative spacing of few hill radii (kokubo ida 00), fill disk thinking of asyntituc isolation mass (Ida Lin 10), trapped (hasegawa pudritz 11, cridland 16)
+\end{workout}
+
 
