--- a/appendice.tex
+++ b/appendice.tex
@@ -20,7 +20,10 @@ $\tau_p=\frac{1}{c}\frac{a\sin{i}M_p}{M_*}$
 $\frac{M_L}{\msun{}}=0.123\frac{\theta_E^2}{\upvarpi_{rel}}$
 Pg 83. fig 5.7. Applications pg 93
 (Gould 10: ''fREQUENCY OF SOLAR LIKE SYSTEM AND ICE DAS GIANT BEYOND SNOW LINE FROM MICROLENSING...'')
+Survey: Cassan 12, gaudi 12 `'Microlensing Surveys for Exoplanets''
 \end{workout}
+
+
 
 \begin{workout}[Imaging: star-planet brightness ration]
 pg 149
@@ -31,4 +34,5 @@ pg 149
 \begin{workout}[Imaging: Observational limits]
 ground based (pg 158) space based imaging (pg162)
 fig 7.10
+Survey: bowler 2016
 \end{workout}
