--- a/seminario.bib
+++ b/seminario.bib
@@ -9,6 +9,16 @@
   publisher={IOP Publishing}
 }
 
+@article{bouvier2002theory,
+  title={Theory of turbulent accretion disks},
+  author={Bouvier, J and Zahn, J-P and Terquem, CEJMLJ},
+  journal={European Astronomical Society Publications Series},
+  volume={3},
+  pages={203--228},
+  year={2002},
+  publisher={EDP Sciences}
+}
+
 @article{kley2012planet,
   title={Planet-disk interaction and orbital evolution},
   author={Kley, W and Nelson, RP},
