--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -190,6 +190,11 @@ V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
 \end{workout}
 
 
+\begin{workout}[transit survey Kepler: coughlin 2016]
+PLANETARY CANDIDATES OBSERVED BY KEPLER. VII. THE FIRST FULLY UNIFORM CATALOG BASED ON THE ENTIRE 48 MONTH DATASET (Q1–Q17 DR24
+\end{workout}
+
+
 \begin{workout}[transiti refs: osservabilie probabilit\'a di rilevamento]
 pg103
 pg 117, eccentric orbit pg 121-122
@@ -220,20 +225,3 @@ fig 6.35
 
 
 %\section{Struttura interna, composizione/diagramma $(M,R)$}
-
-{\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{YSO: distribuzione propriet\'a dischi protoplanetari}
-}
-Perryman ch 10
-\begin{workout}[YSO: classificazione SED]
-
-\end{workout}
-
-\begin{workout}[YSO properties distro]
-da dove sono ricavete nei PPS?
-mass: MMSN, andrews 10, manara 16
-lifetime: IR/UV excess: haisch 01, mamajek 09
-initial embryo starting position: relative spacing of few hill radii (kokubo ida 00), fill disk thinking of asyntituc isolation mass (Ida Lin 10), trapped (hasegawa pudritz 11, cridland 16)
-\end{workout}
-
-
