something for disks properties distro

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -144,9 +144,17 @@ EUV($E\approx13.6eV$): ionization, FUV($E\approx6-13.6eV$): dissociation, X-ray
 
 \section{YSO: distribuzione propriet\'a dischi protoplanetari}
 
-Perryman ch 10
-\begin{workout}[YSO: classificazione SED]
-
+\begin{workout}[YSO: classificazione ]
+SED: emissine a lunghezze d'onda millimetriche probano tutto il volume del disco, otticamente sottile a quelle lunghezze (Beckwith 90, Beckwith Sargent91).
+$S_{\nu}\propto B_{\nu}(1-\exp{-\tau})\approx B_{\nu}\tau$: emission produced near cold disk mid-plane.
+Rayleigh-jeans: $B_{\nu}\propto T$ and, since $\tau=\kappa\Sigma$, $S_{\nu}\propto \kappa\Sigma T$.
+(SED: Andrews williams 07)
+Survey: 0.3'', 345Ghz(870$\micro m$) 1Myr old Ophiuchus stars forming region
+Se la viscosit\'a \'e statica e distribuita secondo $\nu\propto r\expy{\gamma}$:
+\begin{align}
+&R_c=R_1\mathcal{T}\expy{1/(2-\gamma)}\\
+&M_d=M_{d,0}\mathcal{T}\expy{-1/2(2-\gamma)}\\
+\end{align}
 \end{workout}
 
 \begin{workout}[YSO properties distro]
@@ -155,15 +163,43 @@ da dove sono ricavete nei PPS?
 mass: MMSN, andrews 10, manara 16
 lifetime: IR/UV excess: haisch 01, mamajek 09
 initial embryo starting position: relative spacing of few hill radii (kokubo ida 00), fill disk thinking of asyntituc isolation mass (Ida Lin 10), trapped (hasegawa pudritz 11, cridland 16)
+Hueso 05: evolution of protoplanetary disk, meyer 06 Formation and evolution of planetary systems, Udry 07: statistical properties of exoplanets)
+Distribuzione di probabilit\'a per condizioni iniziali.
+Initial condition for planet formation (protoplanetry disk \cite{meyer2006formation}): disk metallicity, mass, lifetime, \ldots
+
+{Metallicity and Dust/Gas}
+$[M/H]$ distro modelled as normal: $\mu=-0.02$, $\sigma=0.22$ (photosphere of solar-like stars in solar neighborhood): Santos05.
+$f_{dg}=f_{dg,\odot}10\expy{[M/H]}$ with $f_{dg,\odot}=0.01-0.02$.
+
+Initial disk mass
+(infall phase end, no more self-gravitational instabilities) - stability(shu90), MMSN hayashi81/weidenshilling77, observations(Andrews10,Manara16) points to $(0.1-10)\%$ stellar mass, distro log-normal with mean $0.01M_*$.
+
+{Disk lifetime}
+$1-10My$ with mean $3My$ (Haisch01, Mamajek09)
+
+{Embryo starting position}
+Usually a distro uniform in log(a): relative spacing of few Hill spheres (Kokubo Ida 10)
+Ida, lin10: asymptotical isolation mass ''Toward a Deterministic Model of Planetary Formation VI'',
+Trapped evolution model: Hasegawa pudritz 11, Cridland 16
+
 \end{workout}
 
 \begin{workout}[Refs dischi protoplanetari]
 Ciesla Dullemond10 
+Perryman ch 10
+williams cieza 11
+Andrews 09-10
+mamajek 2009 - Initial conditions of planet formation: lifetimes of primordial disks
 \end{workout}
 
 \begin{workout}[Classificazione YSO: convenzioni]
 Sorgenti con SED declinante in mid infrared ($2.5-10\si{\micro\meter}$): $1.5<\alpha_{IR}=<0$. Active/passive: mass infall convert G into thermalradiation/reprocessed starlight.
+Refs: Perrymann 10.3 - disk formation pg 218 - 
+Classification based on slope of SED between $2-25\si{\micro\meter}$: $\alpha_{IR}=\TDly{\nu}{\nu F_{\nu}}=$ (Gail Hoppo 2010)
+Spitzer: forming regions within 500pc
+Formation: disk quickly forms as more distant material with high angular momentum, centrifugal radius $R(t)\propto\Omega^2 t^3$: . Class 0-I : protostellar disk, gravitational unstable (cloud collapse: the collapse of the cores of slowly rotating isothermal clouds, Terebey shu cassen 1984, selfsimilar collapse of isothermal spheres and star formation, shu 77). Singular isothermal sphere: $\rho=\frac{a^2}{2\pi G}r\expy{-2}$, $M(r)=\frac{2a^2}{G}r$
 \end{workout}
+
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Schema di formazione planetaria per core accretion}
